solved the mark to read error problem

--- a/index.html
+++ b/index.html
@@ -87,20 +87,20 @@
                 allow for a streamlined .</p>
 
             <!-- display part -->
-            <div class="flex flex-col lg:flex-row justify-between mt-10 ">
+            <div class="flex flex-col lg:flex-row justify-between mt-10 gap-10 ">
                 <!-- cards -->
-                <div id="post-container">
+                <div id="post-container" class="flex-1">
                     <!-- all cards -->
                 </div>
 
-                <div>
+                <div class="flex-1">
                     <div id="selected-card" class="bg-[#12132D0D] p-10 rounded-3xl">
 
                         <div class="flex justify-between items-center ">
                             <h3>Title</h3>
                              <div class="flex  gap-3 items-center">
                                  <img src="./images/icon/right.png" alt="icon">
-                                 <p>Mark as read (<span id="countPlus">000</span>)</p>
+                                 <p>Mark as read (0<span id="countPlus">0</span>)</p>
                             </div>
                         </div>
     
