search part apply

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     mug!</p>
                 <!-- input field -->
                 <label class="input  flex items-center   rounded-[50px] py-4 lg:py-8 text-base mt-2 text-black">
-                    <input type="text" class="grow " placeholder="Search" />
+                    <input type="text" class="grow " placeholder="Search" id="input-Field"/>
                     <!-- search button -->
-                    <button
+                    <button onclick="search()"
                         class="hover:bg-gray-700 p-2  lg:px-5 rounded-[46px] bg-[#797DFC] text-white text-sm lg:text-xl">Search</button>
                 </label>
             </div>
