loading system applied

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         .avatar.offline:before{
             background: #FF3434;
         }
+        .loading{
+            width:50px;
+        }
     </style>
 </head>
 
