--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </header>
     <main class="mt-16 mulish mx-5 lg:mx-32 ">
         <!-- discuss part -->
-        <section>
+        <section class="my-20">
             <h1 class="font-black text-4xl  text-center   ">Let’s Discuss</h1>
             <p class="text-[#15162e99] inter text-lg    text-center my-5 ">Yes, you can run unit tests and view
                 the results directly within the app. The integrated testing features
@@ -104,26 +104,26 @@
                     <!-- all cards -->
                 </div>
 
-                <div class="flex-1">
-                    <div id="selected-card" class="bg-[#12132D0D] p-10 rounded-3xl">
+                <div>
+                    <div id="selected-card" class="bg-[#12132D0D] p-4 sm:p-10 rounded-3xl ">
 
-                        <div class="flex justify-between items-center ">
-                            <h3>Title</h3>
+                        <div class="flex justify-between items-center gap-10">
+                            <h3 class="font-bold text-xl ">Title</h3>
                             <div class="flex  gap-3 items-center">
                                 <img src="./images/icon/right.png" alt="icon">
-                                <p>Mark as read (0<span id="countPlus">0</span>)</p>
+                                <p class="text-base text-[#12132D99] ">Mark as read (0<span id="countPlus">0</span>)</p>
                             </div>
                         </div>
-
-                        <!-- only selected card -->
-
+    
+                            <!-- only selected card -->
+    
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- forum part -->
-        <section class="bg-[#12132D] rounded-[32px] flex flex-col lg:flex-row justify-between items-center p-10 mulish my-24">
+        <section class="bg-[#12132D] rounded-[32px] flex flex-col lg:flex-row justify-between items-center p-4 sm:p-10 mulish my-24">
             <div class="text-white p-10  ">
                 <h1 class="text-4xl font-black">Join Our Forum</h1>
                 <p class="text-[#FFFFFFCC] my-4">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app. </p>
@@ -135,7 +135,7 @@
         </section>
 
         <!-- latest part -->
-        <section class="mulish">
+        <section class="mulish mt-10">
             <h1 class="font-black text-4xl text-center ">Latest Posts</h1>
             <p class="text-[#15162e99] inter text-lg text-center mt-5 ">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
 
@@ -148,7 +148,7 @@
         <script src="./index.js"></script>
     </main>
     <footer
-        class=" footer-center p-10 lg:p-32 bg-gradient-to-t from-[#12132d03] to-[#12132d0D] space-y-10 mulish mt-16">
+        class=" footer-center p-10 lg:p-32 bg-gradient-to-t from-[#12132d03] to-[#12132d0D] space-y-10 mulish mt-28">
         <h2 class="text-4xl font-black ">BaLmy</h2>
         <p class="text-base text-[#12132DB3]">
             develop your skill and your self . Be serious about your career and lets make it better . If you take time
