--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
         .mulish {
             font-family: "Mulish", sans-serif;
         }
-        .avatar.offline:before{
+
+        .avatar.offline:before {
             background: #FF3434;
         }
-        .loading{
-            width:50px;
+
+        .loading {
+            width: 50px;
         }
     </style>
 </head>
@@ -77,7 +79,8 @@
                         class="hover:bg-gray-700 p-2  lg:px-5 rounded-[46px] bg-[#797DFC] text-white text-sm lg:text-xl">Search</button>
                 </label>
             </div>
-            <div class="bg-white rounded-[32px] p-8 lg:p-12 text-black font-medium text-base lg:text-2xl space-y-2 ">
+            <div
+                class="bg-white rounded-[32px] p-8 lg:p-12 text-[#12132DCC] font-medium text-base lg:text-2xl space-y-2 ">
                 <p class="flex justify-between items-center gap-10"><span>Registered Users</span><span>01</span></p>
                 <p class="flex justify-between items-center"><span>Forum</span><span>02</span></p>
                 <p class="flex justify-between items-center"><span>Topics</span><span>05</span></p>
@@ -94,9 +97,9 @@
                 allow for a streamlined .</p>
 
             <!-- display part -->
-                <div class="hidden justify-center " id="loading">
-                    <span class="loading loading-bars loading-xs "></span>
-                </div>
+            <div class="hidden justify-center " id="loading">
+                <span class="loading loading-bars loading-xs "></span>
+            </div>
 
             <div class="flex flex-col lg:flex-row justify-between mt-10 gap-10 ">
                 <!-- cards -->
@@ -114,20 +117,23 @@
                                 <p class="text-base text-[#12132D99] ">Mark as read (0<span id="countPlus">0</span>)</p>
                             </div>
                         </div>
-    
-                            <!-- only selected card -->
-    
+
+                        <!-- only selected card -->
+
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- forum part -->
-        <section class="bg-[#12132D] rounded-[32px] flex flex-col lg:flex-row justify-between items-center p-4 sm:p-10 mulish my-24">
+        <section
+            class="bg-[#12132D] rounded-[32px] flex flex-col lg:flex-row justify-between items-center p-4 sm:p-10 mulish my-24">
             <div class="text-white p-10  ">
                 <h1 class="text-4xl font-black">Join Our Forum</h1>
-                <p class="text-[#FFFFFFCC] my-4">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app. </p>
-                <a class="btn bg-[#797DFC] rounded-[50px] px-8 text-white text-base sm:text-xl border-none mt-2">Registered Now</a>
+                <p class="text-[#FFFFFFCC] my-4">Share your favorite opinion and win and wp forum coffee mug! Yes, you
+                    can run unit tests and view the results directly within the app. </p>
+                <a class="btn bg-[#797DFC] rounded-[50px] px-8 text-white text-base sm:text-xl border-none mt-2">Registered
+                    Now</a>
             </div>
             <div>
                 <img src="./images/joinforum.png" alt="logo">
@@ -137,10 +143,11 @@
         <!-- latest part -->
         <section class="mulish mt-10">
             <h1 class="font-black text-4xl text-center ">Latest Posts</h1>
-            <p class="text-[#15162e99] inter text-lg text-center mt-5 ">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+            <p class="text-[#15162e99] inter text-lg text-center mt-5 ">Yes, you can run unit tests and view the results
+                directly within the app. The integrated testing features allow for a streamlined .</p>
 
-            <div class="flex flex-col lg:flex-row items-center justify-between gap-7 mt-14" id="latestPostContainer"> 
-            <!-- latest post  -->
+            <div class="flex flex-col lg:flex-row items-center justify-between gap-7 mt-14" id="latestPostContainer">
+                <!-- latest post  -->
             </div>
         </section>
 
@@ -166,4 +173,3 @@
 </body>
 
 </html>
-
